Create and implement endpoint for ending match Also change endpoint for starting game to respect REST architecture. Now has to PUT game state (running or finished) to start/end game. TG-56 #needs review
